# Teambuilding-tools

./: .gitignore  .prettierignore  CLAUDE.md  README.md  control.html  eslint.config.js  package-lock.json  package.json  stage.html  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: DECISIONS.md
scenari-bundled/: README.md
scenari-bundled/Treno deragliato/: ambientazione.json
scripts/: gen_suoni.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AnimazionePrigione.module.css  AnimazionePrigione.tsx  AnimazioneVittoria.module.css  AnimazioneVittoria.tsx  Annotazione.module.css  Annotazione.tsx  Cerchietto.module.css  Cerchietto.tsx  ClassificaPodio.module.css  ClassificaPodio.tsx  DisplayTimer.module.css  DisplayTimer.tsx  EmojiPicker.module.css  EmojiPicker.tsx  Icone.tsx  Presentazione.tsx  Quadratino.module.css  Quadratino.tsx  Ruota.module.css  Ruota.tsx  Scena.module.css  Scena.tsx  ScenaCountdownFullscreen.module.css  ScenaCountdownFullscreen.tsx  ScenaLeaderboard.module.css  ScenaLeaderboard.tsx  ScenaVoti.module.css  ScenaVoti.tsx  ScoreboardConflitto.module.css  ScoreboardConflitto.tsx
src/control/: App.module.css  App.tsx  control.css  main.tsx
src/lib/: ambientazione.test.ts  ambientazione.ts  audio.ts  colori.ts  countdownMusica.ts  events.ts  immagine.ts  markdown.test.ts  markdown.ts  path.ts  recents.ts  ruota.test.ts  ruota.ts  scena.test.ts  scena.ts  sottofondo.ts  storage.ts  useViewport.ts
src/stage/: App.module.css  App.tsx  main.tsx  (+1 more)
(+59 files in other folders)
