[package]
name = "gdr-teambuilding-tool"
version = "0.1.0"
description = "GDR Teambuilding Tool"
authors = ["Stefano Costa Acquisti"]
edition = "2021"

[lib]
name = "gdr_teambuilding_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
