[package]
name = "gdr-teambuilding-tool"
version = "0.1.0"
description = "GDR Teambuilding Tool"
authors = ["Stefano Costa Acquisti"]
edition = "2021"

[lib]
name = "gdr_teambuilding_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Audio nativo per i tick della ruota: l'audio del webview (WebKitGTK) ha
# latenza alta/variabile, quindi i tick passano dal backend (bassa latenza
# costante). Niente decoder di formati: sintetizziamo i campioni in Rust.
rodio = { version = "0.20", default-features = false, features = [
  "symphonia-mp3",    # MP3
  "symphonia-vorbis", # OGG Vorbis (include il container OGG)
  "symphonia-flac",   # FLAC
  "wav",              # WAV (hound)
] }
